--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^0.19.0",
     "he": "^0.5.0",
     "minimist": "^1.2.0",
+    "moment": "^2.11.2",
     "request": "^2.69.0",
     "rimraf": "^2.5.1"
   }
